--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+### Scala, SBT, Java
 *.class
 *.log
+*target/
+.bsp/
+
+### IntelliJ
+# Default ignored files
+#.idea/shelf/
+#.idea/workspace.xml
+## Datasource local storage ignored files
+#.idea/dataSources/
+#.idea/dataSources.local.xml
+## Editor-based HTTP Client requests
+#.idea/httpRequests/
+.idea/
